--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
         "release": "standard-version",
         "pushtag": "git push --follow-tags origin master",
         "pushtag1": "git push --tags origin master",
-        "eslint": "eslint --ext .ts .",
-        "eslint:fix": "eslint --ext .ts . --fix",
+        "eslint": "eslint --ext .ts,.js .",
+        "eslint:fix": "eslint --ext .ts,.js . --fix",
         "prettier": "prettier --write .",
         "create": "hygen module with-prompt",
         "changelog": "conventional-changelog -p angular -i docs/common/CHANGELOG.md -s -r 0",
